examples/test/testpolicy12359.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12359
  namespace: namespace28
spec:
  podSelector:
    matchLabels:
      key18: value22
      key48: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value16
          key11: value10
      podSelector:
        matchLabels:
          key47: value10
          key13: value18
          key48: value10
